--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -146,18 +146,22 @@ body {
     border-radius: 7px;
     padding: 10px;
     width: 100%;
-    max-height: 200px;
+    max-height: 500px;
     overflow: auto;
 }
 
-.chats-main > .chat-section > .conversation > .bubble :not(pre) code {
+.chats-main > .chat-section > .conversation > .bubble code {
     background-color: rgb(210 210 210);
     border-radius: 3px;
     padding: 0px 5px;
 }
 
-.chats-main > .chat-section > .conversation > .bubble.user :not(pre) code {
+.chats-main > .chat-section > .conversation > .bubble.user code {
     background-color: rgb(28, 126, 224);
+}
+
+.chats-main > .chat-section > .conversation > .bubble pre code {
+    background-color: transparent;
 }
 
 @keyframes loadingAnimation {
