--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -237,6 +237,10 @@ body {
     max-height: 100%;
     min-height: 50px;
 }
+.message-container > .custom-field.textarea.disabled {
+    pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.05);
+}
 
 .message-container > .message-button {
     position: absolute;
